--- a/index.html
+++ b/index.html
@@ -70,22 +70,22 @@
 
 <div
   id="home"
-  class="relative flex items-center justify-center md:justify-start w-full h-screen bg-cover bg-center text-center md:text-start "
+  class="relative flex items-center justify-center md:justify-start w-full h-[500px] md:h-screen bg-cover bg-center text-center md:text-start "
   style="background-image: url('slide-03.jpg');"
 >
   <!-- Overlay (optional for better text contrast) -->
-  <div class="absolute inset-0 bg-black/40"></div>
+  <div class="absolute inset-0 bg-black/30"></div>
 
   <div class="relative z-10 px-4 md:mt-20 md:ml-10">
     <!-- Smaller text on mobile, larger on desktop -->
-    <h4 class="text-2xl  md:text-4xl font-bold text-black">
+    <h4 class="text-1xl md:text-4xl font-bold text-black">
       Men Collection 2024
     </h4>
-    <h4 class="text-4xl md:text-7xl lg:text-8xl font-cursive text-black mt-2">
+    <h4 class="text-4xl md:text-8xl font-extrabold text-black mt-2">
       New Arrivals
     </h4>
     <button
-      class="mt-6 bg-sky-400 text-black px-10 py-3 rounded-full hover:bg-sky-500 transition duration-300 "
+      class="mt-3 bg-sky-400 text-black px-10 py-2 md:py-3 rounded-full hover:bg-sky-500 transition duration-300 "
     >
       Shop Now
     </button>
