added dark mode

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <header class="flex items-center justify-between md:justify-evenly  px-8 py-4 bg-[#EAE8E7] fixed top-0 w-full h-[70px] shadow-md z-[1000]">
     <div class="logo">
-      <img src="logo-01.png.webp" alt="logo">
+      <h5 class="text-3xl"><b>Coza</b>Store</h5>
     </div>
 
     <div class="navbar">
@@ -47,7 +47,7 @@
   <!-- Sidebar for mobile -->
   <aside class="sidebar" aria-hidden="true">
     <div class="sidebar-header">
-      <img src="logo-01.png.webp" alt="logo">
+      <h5 class="text-3xl"><b>Coza</b>Store</h5>
       <button class="close-sidebar" aria-label="Close menu">
         <i class="fa-solid fa-xmark"></i>
       </button>
